trace/eeschema/trace_parser.py
#!/usr/bin/env python3
#
# This program source code file is part of Trace, an AI-native PCB design application.
#
# Copyright (C) 2025-2026 Trace Developers Team
# Copyright The Trace Developers, see TRACE_AUTHORS.txt for contributors.
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program.  If not, see <http://www.gnu.org/licenses/>.

"""
Trace SCH Parser

A recursive descent parser for .trace_sch files based on the EBNF grammar
defined in trace_ebnf. Parses TOON-based schematic format into structured
dictionaries/lists.
"""

import re
import uuid
from typing import List, Dict, Any, Optional, Tuple, Union
from dataclasses import dataclass


# =============================================================================
# Exception Classes
# =============================================================================

class TraceParseError(Exception):
    """Raised when a parse error occurs."""
    
    def __init__(self, message: str, line: int = 0, column: int = 0):
        self.message = message
        self.line = line
        self.column = column
        super().__init__(f"Parse error at line {line}, column {column}: {message}")


class TraceParseWarning:
    """Represents a critical warning during parsing (non-fatal)."""
    
    def __init__(self, message: str, line: int = 0, column: int = 0):
        self.message = message
        self.line = line
        self.column = column
    
    def __repr__(self):
        return f"TraceParseWarning(line={self.line}, col={self.column}: {self.message})"
    
    def __str__(self):
        return f"Warning at line {self.line}, column {self.column}: {self.message}"


# =============================================================================
# Token Classes
# =============================================================================

@dataclass
class Token:
    """Represents a token with type, value, and position."""
    type: str
    value: Any
    line: int
    column: int
    
    def __repr__(self):
        return f"Token({self.type}, {self.value!r}, line={self.line}, col={self.column})"


# =============================================================================
# Lexer
# =============================================================================

class TraceLexer:
    """Tokenizes input string into tokens."""
    
    # Token types
    EOF = "EOF"
    IDENT = "IDENT"
    NUMBER = "NUMBER"
    STRING = "STRING"
    UUID = "UUID"
    COMMENT = "COMMENT"
    WS = "WS"
    
    # Operators and punctuation
    AT = "@"
    ARROW = "->"
    EQUALS = "="
    COLON = ":"
    COMMA = ","
    LBRACE = "{"
    RBRACE = "}"
    LPAREN = "("
    RPAREN = ")"
    LT = "<"
    GT = ">"
    DOT = "."
    
    # Keywords
    KEYWORDS = {
        "comp", "net", "wire", "cwire", "cwiredef", "label", "glabel", "hier", "sheet",
        "text", "junction", "noconnect", "bus", "polyline", "inst",
        "rot", "props", "pins", "shape", "file", "size", "ins", "outs",
        "project", "path", "page", "uid", "prop",
        "rectangle", "arc", "bezier", "circle", "text_box", "bus_entry",
        "start", "end", "mid", "center", "radius", "margins", "effects",
        "stroke", "fill", "width", "type", "color"
    }
    
    def __init__(self, text: str):
        self.text = text
        self.pos = 0
        self.line = 1
        self.column = 1
        self.tokens: List[Token] = []
        self._tokenize()
    
    def _tokenize(self):
        """Tokenize the input text."""
        while self.pos < len(self.text):
            # Skip whitespace (but track it for line/column)
            if self._skip_whitespace():
                continue
            
            # Comments (only if # is followed by whitespace or newline)
            # Otherwise, # is part of an identifier like #PWR02
            if self._current_char() == '#':
                # Peek ahead to see if this is a comment or part of an identifier
                peek_pos = self.pos + 1
                if peek_pos >= len(self.text) or self.text[peek_pos].isspace():
                    # It's a comment
                    self._tokenize_comment()
                    continue
                # Otherwise, it's part of an identifier, fall through to identifier handling
            
            # Strings
            if self._current_char() == '"':
                self._tokenize_string()
                continue
            
            # Numbers (but check if it's actually part of an identifier like "10k" or a UUID)
            if self._current_char().isdigit() or (self._current_char() == '-' and 
                                                   self.pos + 1 < len(self.text) and 
                                                   self.text[self.pos + 1].isdigit()):
                # Check if this might be a UUID (starts with hex digit, has dashes in UUID pattern)
                # Peek ahead to see if it matches UUID pattern
                peek_pos = self.pos
                if self._current_char() == '-':
                    peek_pos += 1
                
                # Try to read what might be a UUID
                uuid_candidate = ""
                while peek_pos < len(self.text):
                    char = self.text[peek_pos]
                    if (char.isalnum() or char == '-'):
                        uuid_candidate += char
                        peek_pos += 1
                    else:
                        break
                
                # Check if it's a UUID
                if uuid_candidate and self._is_uuid(uuid_candidate):
                    # It's a UUID, tokenize as identifier (which will recognize it as UUID)
                    self._tokenize_ident()
                    continue
                
                # Check if this looks like an identifier (number followed by letter/underscore/colon)
                # by peeking ahead
                peek_pos = self.pos
                if self._current_char() == '-':
                    peek_pos += 1
                # Read digits
                while peek_pos < len(self.text) and (self.text[peek_pos].isdigit() or self.text[peek_pos] == '.'):
                    peek_pos += 1
                # Check if next char is letter/underscore/colon (making it an identifier)
                if peek_pos < len(self.text) and (self.text[peek_pos].isalpha() or self.text[peek_pos] == '_' or self.text[peek_pos] == ':'):
                    # It's an identifier, not a number
                    self._tokenize_ident()
                    continue
                else:
                    # It's a number
                    self._tokenize_number()
                    continue
            
            # Arrow operator (->)
            if self._current_char() == '-' and self.pos + 1 < len(self.text) and \
               self.text[self.pos + 1] == '>':
                self._add_token(self.ARROW, "->")
                self._advance(2)
                continue
            
            # Single character operators
            if self._current_char() == '@':
                self._add_token(self.AT, "@")
                self._advance()
                continue
            if self._current_char() == '=':
                self._add_token(self.EQUALS, "=")
                self._advance()
                continue
            if self._current_char() == ':':
                self._add_token(self.COLON, ":")
                self._advance()
                continue
            if self._current_char() == ',':
                self._add_token(self.COMMA, ",")
                self._advance()
                continue
            if self._current_char() == '{':
                self._add_token(self.LBRACE, "{")
                self._advance()
                continue
            if self._current_char() == '}':
                self._add_token(self.RBRACE, "}")
                self._advance()
                continue
            if self._current_char() == '(':
                self._add_token(self.LPAREN, "(")
                self._advance()
                continue
            if self._current_char() == ')':
                self._add_token(self.RPAREN, ")")
                self._advance()
                continue
            if self._current_char() == '<':
                self._add_token(self.LT, "<")
                self._advance()
                continue
            if self._current_char() == '>':
                self._add_token(self.GT, ">")
                self._advance()
                continue
            
            # Identifiers (including those starting with +, like +5V, or #, like #PWR02)
            if self._current_char().isalnum() or self._current_char() == '_' or self._current_char() == '+' or self._current_char() == '#':
                self._tokenize_ident()
                continue
            
            # Unknown character
            raise TraceParseError(
                f"Unexpected character: {self._current_char()!r}",
                self.line, self.column
            )
        
        # Add EOF token
        self._add_token(self.EOF, None)
    
    def _current_char(self) -> str:
        """Get current character."""
        if self.pos >= len(self.text):
            return '\0'
        return self.text[self.pos]
    
    def _advance(self, n: int = 1):
        """Advance position by n characters."""
        for _ in range(n):
            if self.pos < len(self.text):
                if self.text[self.pos] == '\n':
                    self.line += 1
                    self.column = 1
                else:
                    self.column += 1
                self.pos += 1
    
    def _add_token(self, token_type: str, value: Any):
        """Add a token to the list."""
        self.tokens.append(Token(token_type, value, self.line, self.column))
    
    def _skip_whitespace(self) -> bool:
        """Skip whitespace characters. Returns True if whitespace was skipped."""
        if not self._current_char().isspace():
            return False
        
        start_pos = self.pos
        while self.pos < len(self.text) and self.text[self.pos].isspace():
            self._advance()
        
        # Only add WS token if we skipped something
        if self.pos > start_pos:
            self._add_token(self.WS, None)
        
        return True
    
    def _tokenize_comment(self):
        """Tokenize a comment (from # to end of line)."""
        start_line = self.line
        start_col = self.column
        start_pos = self.pos
        
        # Read until end of line
        while self.pos < len(self.text) and self.text[self.pos] != '\n':
            self._advance()
        
        # Include the newline if present
        if self.pos < len(self.text):
            self._advance()
        
        comment_text = self.text[start_pos:self.pos].rstrip('\n\r')
        self._add_token(self.COMMENT, comment_text)
    
    def _tokenize_string(self):
        """Tokenize a string literal."""
        start_line = self.line
        start_col = self.column
        start_pos = self.pos
        
        self._advance()  # Skip opening quote
        
        value = ""
        escape = False
        
        while self.pos < len(self.text):
            char = self._current_char()
            
            if escape:
                if char == 'n':
                    value += '\n'
                elif char == 't':
                    value += '\t'
                elif char == 'r':
                    value += '\r'
                elif char == '\\':
                    value += '\\'
                elif char == '"':
                    value += '"'
                else:
                    value += char
                escape = False
                self._advance()
                continue
            
            if char == '\\':
                escape = True
                self._advance()
                continue
            
            if char == '"':
                self._advance()  # Skip closing quote
                self._add_token(self.STRING, value)
                return
            
            value += char
            self._advance()
        
        raise TraceParseError(
            "Unterminated string literal",
            start_line, start_col
        )
    
    def _tokenize_number(self):
        """Tokenize a number (integer or float)."""
        start_line = self.line
        start_col = self.column
        start_pos = self.pos
        
        # Handle negative sign
        negative = False
        if self._current_char() == '-':
            negative = True
            self._advance()
        
        # Read digits
        value = ""
        has_dot = False
        
        while self.pos < len(self.text):
            char = self._current_char()
            if char.isdigit():
                value += char
                self._advance()
            elif char == '.' and not has_dot:
                value += char
                has_dot = True
                self._advance()
            else:
                break
        
        if not value or value == '.':
            raise TraceParseError(
                "Invalid number",
                start_line, start_col
            )
        
        num_value = float(value) if has_dot else int(value)
        if negative:
            num_value = -num_value
        
        self._add_token(self.NUMBER, num_value)
    
    def _tokenize_ident(self):
        """Tokenize an identifier."""
        start_pos = self.pos
        value = ""
        
        # Check if this might be a UUID (starts with hex digit)
        # UUIDs can contain dashes, so we need special handling
        if self._current_char().isalnum():
            # Try to read a potential UUID (allows dashes)
            while self.pos < len(self.text):
                char = self._current_char()
                if char.isalnum() or char == '_' or char == ':' or char == '-':
                    value += char
                    self._advance()
                else:
                    break
            
            # Check if it's a UUID (format: 8-4-4-4-12 hex digits)
            if self._is_uuid(value):
                # Validate that it's not a nil UUID
                if self._is_nil_uuid(value):
                    raise TraceParseError(
                        f"Invalid nil UUID: {value}. UUIDs must not be all zeros.",
                        self.line, self.column
                    )
                self._add_token(self.UUID, value)
                return
            # Otherwise, it's a regular identifier (may contain +, dashes, colons, underscores, decimal points, #)
            # Continue reading to allow these characters
            while self.pos < len(self.text):
                char = self._current_char()
                if char.isalnum() or char == '_' or char == ':' or char == '-' or char == '+' or char == '.' or char == '#':
                    value += char
                    self._advance()
                else:
                    break
        else:
            # Regular identifier starting with +, _, :, -, or # (allows +, dashes, colons, underscores, decimal points, #)
            while self.pos < len(self.text):
                char = self._current_char()
                if char.isalnum() or char == '_' or char == ':' or char == '-' or char == '+' or char == '.' or char == '#':
                    value += char
                    self._advance()
                else:
                    break
        
        if not value:
            raise TraceParseError(
                "Empty identifier",
                self.line, self.column
            )
        
        self._add_token(self.IDENT, value)
    
    def _is_uuid(self, value: str) -> bool:
        """Check if a value matches UUID format."""
        # UUID format: 8-4-4-4-12 hex digits
        uuid_pattern = r'^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$'
        return bool(re.match(uuid_pattern, value))
    
    def _is_nil_uuid(self, value: str) -> bool:
        """Check if a UUID is the nil UUID (all zeros)."""
        return value.lower() == "00000000-0000-0000-0000-000000000000"
    
    def get_tokens(self) -> List[Token]:
        """Get the list of tokens."""
        return self.tokens


# =============================================================================
# Parser
# =============================================================================

class TraceParser:
    """Parses tokens into statement dictionaries."""
    
    def __init__(self, tokens: List[Token]):
        self.tokens = tokens
        self.pos = 0
        self.warnings: List[TraceParseWarning] = []
    
    def _current_token(self) -> Token:
        """Get current token."""
        if self.pos >= len(self.tokens):
            return Token(TraceLexer.EOF, None, 0, 0)
        return self.tokens[self.pos]
    
    def _peek_token(self, offset: int = 1) -> Token:
        """Peek at token ahead."""
        idx = self.pos + offset
        if idx >= len(self.tokens):
            return Token(TraceLexer.EOF, None, 0, 0)
        return self.tokens[idx]
    
    def _advance(self):
        """Advance to next token."""
        if self.pos < len(self.tokens):
            self.pos += 1
    
    def _skip_ws(self):
        """Skip whitespace tokens."""
        while self._current_token().type == TraceLexer.WS:
            self._advance()
    
    def _expect(self, token_type: str, value: Any = None) -> Token:
        """Expect a specific token type (and optionally value)."""
        self._skip_ws()
        token = self._current_token()
        
        if token.type != token_type:
            raise TraceParseError(
                f"Expected {token_type}, got {token.type}",
                token.line, token.column
            )
        
        if value is not None and token.value != value:
            raise TraceParseError(
                f"Expected {token_type} with value {value!r}, got {token.value!r}",
                token.line, token.column
            )
        
        self._advance()
        return token
    
    def _optional(self, token_type: str, value: Any = None) -> bool:
        """Check if next token matches, and consume it if it does."""
        self._skip_ws()
        token = self._current_token()
        if token.type == token_type:
            if value is None or token.value == value:
                self._advance()  # Consume the token
                return True
        return False
    
    def _extract_uuid_from_statement(self, stmt: Dict[str, Any]) -> Optional[str]:
        """Extract UUID from a statement if it has one."""
        if not isinstance(stmt, dict):
            return None
        return stmt.get("uid")
    
    def _validate_uuid_uniqueness(self, statements: List[Dict[str, Any]]) -> None:
        """Validate that all UUIDs in statements are unique.
        
        Exception: Components with the same symbol and UUID but different units
        are allowed (e.g., U1 unit 1 and U1B unit 2 of the same component).
        """
        seen_uuids: Dict[str, List[Dict[str, Any]]] = {}
        
        for stmt in statements:
            uuid_val = self._extract_uuid_from_statement(stmt)
            if uuid_val:
                if uuid_val in seen_uuids:
                    # Check if this is a component with same symbol but different unit
                    existing_stmts = seen_uuids[uuid_val]
                    existing_stmt = existing_stmts[0]  # Get first occurrence
                    
                    # Allow duplicate UUIDs if both are components with same symbol but different units
                    if (stmt.get("type") == "component" and 
                        existing_stmt.get("type") == "component" and
                        stmt.get("symbol") == existing_stmt.get("symbol") and
                        stmt.get("unit") != existing_stmt.get("unit")):
                        # This is allowed - same component, different units
                        seen_uuids[uuid_val].append(stmt)
                        continue
                    
                    # Otherwise, it's a duplicate UUID error
                    existing_type = existing_stmt.get("type", "unknown")
                    current_type = stmt.get("type", "unknown")
                    
                    # Try to get line info from the statement if available
                    existing_ref = existing_stmt.get("ref", existing_stmt.get("name", ""))
                    current_ref = stmt.get("ref", stmt.get("name", ""))
                    
                    raise TraceParseError(
                        f"Duplicate UUID found: {uuid_val}. "
                        f"First occurrence: {existing_type} "
                        f"({existing_ref if existing_ref else 'no ref'}). "
                        f"Second occurrence: {current_type} "
                        f"({current_ref if current_ref else 'no ref'}).",
                        0, 0
                    )
                # Store as list to allow multiple components with same UUID
                seen_uuids[uuid_val] = [stmt]
    
    def parse(self) -> List[Dict[str, Any]]:
        """Parse the token stream into a list of statements."""
        statements = []
        
        while self.pos < len(self.tokens):
            self._skip_ws()
            
            if self._current_token().type == TraceLexer.EOF:
                break
            
            if self._current_token().type == TraceLexer.COMMENT:
                stmt = self._parse_comment()
                if stmt:
                    statements.append(stmt)
                continue
            
            stmt = self._parse_statement()
            if stmt:
                # Handle case where wire statement returns a list of wires
                if isinstance(stmt, list):
                    statements.extend(stmt)
                else:
                    statements.append(stmt)
        
        # Validate UUID uniqueness after parsing all statements
        self._validate_uuid_uniqueness(statements)
        
        # Auto-assign junction IDs to junctions that don't have them
        self._assign_junction_ids(statements)
        
        # Auto-assign cwire refs to cwires that don't have them
        self._assign_cwire_refs(statements)
        
        # Validate cwire endpoints (components/pins exist, nets match)
        self._validate_cwires(statements)
        
        return statements
    
    def _assign_cwire_refs(self, statements: List[Dict[str, Any]]) -> None:
        """Auto-assign cwire references (CW1, CW2, etc.) to cwires without refs.
        
        This ensures all cwires have unique references that can be matched
        with cwiredef statements.
        """
        # First, collect existing cwire refs to avoid conflicts
        existing_refs = set()
        for stmt in statements:
            if stmt.get("type") == "cwire" and "ref" in stmt:
                existing_refs.add(stmt["ref"])
        
        # Find the highest existing CW number
        max_cw_num = 0
        for cw_ref in existing_refs:
            if cw_ref.startswith("CW"):
                try:
                    num = int(cw_ref[2:])
                    max_cw_num = max(max_cw_num, num)
                except ValueError:
                    pass
        
        # Assign refs to cwires without them
        next_cw_num = max_cw_num + 1
        for stmt in statements:
            if stmt.get("type") == "cwire" and "ref" not in stmt:
                stmt["ref"] = f"CW{next_cw_num}"
                next_cw_num += 1
    
    def _assign_junction_ids(self, statements: List[Dict[str, Any]]) -> None:
        """Auto-assign junction IDs (JUNC1, JUNC2, etc.) to junctions without IDs.
        
        This ensures all junctions have unique identifiers that can be referenced
        by cwire statements.
        """
        # First, collect existing junction IDs to avoid conflicts
        existing_ids = set()
        for stmt in statements:
            if stmt.get("type") == "junction" and "id" in stmt:
                existing_ids.add(stmt["id"])
        
        # Find the highest existing JUNC number
        max_junc_num = 0
        for junc_id in existing_ids:
            if junc_id.startswith("JUNC"):
                try:
                    num = int(junc_id[4:])
                    max_junc_num = max(max_junc_num, num)
                except ValueError:
                    pass
        
        # Assign IDs to junctions without them
        next_junc_num = max_junc_num + 1
        for stmt in statements:
            if stmt.get("type") == "junction" and "id" not in stmt:
                stmt["id"] = f"JUNC{next_junc_num}"
                next_junc_num += 1
    
    def _validate_cwires(self, statements: List[Dict[str, Any]]) -> None:
        """Validate cwire endpoints after all statements have been parsed.
        
        Checks:
        1. Pin endpoints: the component ref must exist and the pin must exist on
           that component. Raises TraceParseError if not.
        2. Pin-to-pin connections: both pins must belong to the same net.
           Adds a TraceParseWarning (critical warning, not error) if they don't.
        3. Junction endpoints (pin-junction, junction-junction): skipped for now
           since determining the net for a junction is non-trivial.
        """
        # Build index: component ref -> { pin_number -> net_name }
        comp_pins: Dict[str, Dict[Union[str, int], str]] = {}
        for stmt in statements:
            if stmt.get("type") == "component":
                ref = stmt["ref"]
                pins = stmt.get("pins", {})
                if ref in comp_pins:
                    # Merge pins from multi-unit components (same ref, different units)
                    comp_pins[ref].update(pins)
                else:
                    comp_pins[ref] = dict(pins)
        
        # Build index: junction IDs that exist
        junction_ids: set = set()
        for stmt in statements:
            if stmt.get("type") == "junction" and "id" in stmt:
                junction_ids.add(stmt["id"])
        
        # Validate each cwire
        for stmt in statements:
            if stmt.get("type") != "cwire":
                continue
            
            cwire_ref = stmt.get("ref", "<unknown>")
            from_ep = stmt["from"]
            to_ep = stmt["to"]
            
            from_net = self._validate_cwire_endpoint(from_ep, comp_pins, junction_ids, cwire_ref, "from")
            to_net = self._validate_cwire_endpoint(to_ep, comp_pins, junction_ids, cwire_ref, "to")
            
            # Check 2: if both endpoints are pins, verify they share the same net
            if (from_ep["type"] == "pin" and to_ep["type"] == "pin"
                    and from_net is not None and to_net is not None):
                # Ignore if either net is NONE/<NO NET> (unassigned)
                if from_net != "NONE" and to_net != "NONE" and from_net != to_net:
                    self.warnings.append(TraceParseWarning(
                        f"cwire {cwire_ref}: pins {from_ep['ref']}.{from_ep['pin']} (net "
                        f"{from_net}) and {to_ep['ref']}.{to_ep['pin']} (net {to_net}) "
                        f"belong to different nets."
                    ))
    
    def _validate_cwire_endpoint(
        self,
        endpoint: Dict[str, Any],
        comp_pins: Dict[str, Dict[Union[str, int], str]],
        junction_ids: set,
        cwire_ref: str,
        direction: str
    ) -> Optional[str]:
        """Validate a single cwire endpoint and return its net name (or None).
        
        For pin endpoints: raises TraceParseError if the component or pin doesn't exist.
        For junction endpoints: validation is skipped for now.
        
        Returns the net name for pin endpoints, or None for junctions.
        """
        if endpoint["type"] == "junction":
            # Skip junction validation for now
            return None
        
        # Pin endpoint
        ref = endpoint["ref"]
        pin = endpoint["pin"]
        
        # Check component exists
        if ref not in comp_pins:
            raise TraceParseError(
                f"cwire {cwire_ref}: {direction} endpoint references component "
                f"'{ref}' which does not exist."
            )
        
        # Check pin exists on the component
        pins = comp_pins[ref]
        if pin not in pins:
            # Also try string/int conversion since pin numbers may be stored
            # as int in one place and str in another
            alt_pin = str(pin) if isinstance(pin, int) else None
            if alt_pin is None:
                try:
                    alt_pin = int(pin)
                except (ValueError, TypeError):
                    alt_pin = None
            
            if alt_pin is not None and alt_pin in pins:
                return pins[alt_pin]
            
            available = ", ".join(str(p) for p in pins.keys())
            raise TraceParseError(
                f"cwire {cwire_ref}: {direction} endpoint references pin "
                f"'{pin}' on component '{ref}', but that pin does not exist. "
                f"Available pins: [{available}]"
            )
        
        return pins[pin]
    
    def _parse_statement(self) -> Optional[Dict[str, Any]]:
        """Parse a statement."""
        self._skip_ws()
        token = self._current_token()
        
        if token.type != TraceLexer.IDENT:
            return None
        
        keyword = token.value
        
        # Skip deprecated metadata statements - these are now hardcoded in the converter
        if keyword in ("kicad_ver", "kicad_gen", "kicad_gen_ver"):
            # Skip the keyword and its value
            self._advance()  # Skip keyword
            self._skip_ws()
            self._advance()  # Skip value (NUMBER or STRING)
            return None  # Return None to indicate no statement was parsed
        elif keyword == "file_uid":
            return self._parse_file_uid_stmt()
        elif keyword == "paper":
            return self._parse_paper_stmt()
        elif keyword == "comp":
            return self._parse_component_stmt()
        elif keyword == "net":
            return self._parse_net_stmt()
        elif keyword == "wire":
            return self._parse_wire_stmt()
        elif keyword == "cwire":
            return self._parse_cwire_stmt()
        elif keyword == "cwiredef":
            return self._parse_cwiredef_stmt()
        elif keyword == "label":
            return self._parse_label_stmt()
        elif keyword == "glabel":
            return self._parse_glabel_stmt()
        elif keyword == "hier":
            return self._parse_hier_stmt()
        elif keyword == "sheet":
            return self._parse_sheet_stmt()
        elif keyword == "text":
            return self._parse_text_stmt()
        elif keyword == "junction":
            return self._parse_junction_stmt()
        elif keyword == "noconnect":
            return self._parse_noconnect_stmt()
        elif keyword == "bus":
            return self._parse_bus_stmt()
        elif keyword == "polyline":
            return self._parse_polyline_stmt()
        elif keyword == "rectangle":
            return self._parse_rectangle_stmt()
        elif keyword == "arc":
            return self._parse_arc_stmt()
        elif keyword == "bezier":
            return self._parse_bezier_stmt()
        elif keyword == "circle":
            return self._parse_circle_stmt()
        elif keyword == "text_box":
            return self._parse_text_box_stmt()
        elif keyword == "bus_entry":
            return self._parse_bus_entry_stmt()
        elif keyword == "inst":
            return self._parse_instance_meta_stmt()
        else:
            raise TraceParseError(
                f"Unknown statement type: {keyword}",
                token.line, token.column
            )
    
    def _parse_comment(self) -> Optional[Dict[str, Any]]:
        """Parse a comment statement."""
        if self._current_token().type != TraceLexer.COMMENT:
            return None
        
        token = self._current_token()
        self._advance()
        
        return {
            "type": "comment",
            "text": token.value
        }
    
    # Helper parsers
    
    def _parse_coord(self) -> Tuple[float, float]:
        """Parse a coordinate: NUMBER , NUMBER"""
        x = self._expect(TraceLexer.NUMBER).value
        self._expect(TraceLexer.COMMA)
        y = self._expect(TraceLexer.NUMBER).value
        return (float(x), float(y))
    
    def _parse_point(self) -> Tuple[float, float]:
        """Parse a point (which is just a coord)."""
        return self._parse_coord()
    
    def _parse_wire_points(self) -> List[Tuple[float, float]]:
        """Parse wire_points: point { WS? , "->" , WS? , point }"""
        points = [self._parse_point()]
        
        while True:
            self._skip_ws()
            if not self._optional(TraceLexer.ARROW):
                break
            
            self._skip_ws()
            points.append(self._parse_point())
        
        return points
    
    def _parse_property(self) -> Dict[str, str]:
        """Parse property: "prop" , WS , STRING , WS , ":" , WS , STRING"""
        self._expect(TraceLexer.IDENT, "prop")
        self._skip_ws()
        key_token = self._expect(TraceLexer.STRING)
        self._skip_ws()
        self._expect(TraceLexer.COLON)
        self._skip_ws()
        value_token = self._expect(TraceLexer.STRING)
        
        return {key_token.value: value_token.value}
